# smtp-project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  config.json  setup-pre-commit-hook.py  setup-pre-commit-hook.sh
.githooks/: pre-commit
cmake/: CompileOptions.cmake  Development.cmake  InstallThirdParty.cmake  Sanitize.cmake
src/: CMakeLists.txt  testing_precommit.cpp
src/client/: Authenticator.hpp  CMakeLists.txt  Client.hpp  ClientGlobalVariables.inl  Command.hpp  ISocket.h  Mail.hpp  SMTPResponse.h  SSLSocket.cpp  SSLSocket.h  Socket.h  main.cpp
src/client/example/: CMakeLists.txt  MainClient.cpp  Server.cpp
src/client/include/: Authenticator.hpp  Client.hpp  ClientGlobalVariables.inl  Command.hpp  ISocket.h  Mail.hpp  SMTPResponse.h  SSLSocket.h  Socket.h
src/client/source/: Authenticator.cpp  CMakeLists.txt  Client.cpp  Socket.cpp
src/client/ui/: CMakeLists.txt  ConfigurationWidget.cpp  ConfigurationWidget.h  MainWindow.cpp  MainWindow.h  MessageSendingWidget.cpp  MessageSendingWidget.h  UiGlobalVariables.inl
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h  Main.cpp
src/server/: CMakeLists.txt  DBConnector.cpp  DBConnector.hpp  main.cpp  smtp_connection.cpp  smtp_connection.hpp  smtp_session.cpp  smtp_session.hpp
src/server/Concurrency/: CMakeLists.txt
src/server/Concurrency/include/Concurrency/DataStructures/: UnboundedBlockingMPMCQueue.h
src/server/Concurrency/include/Concurrency/Sync/: WaitGroup.h
src/server/Concurrency/include/Concurrency/ThreadPool/: Task.h  ThreadPool.h
src/server/Concurrency/src/Sync/: WaitGroup.cpp
src/server/Concurrency/src/ThreadPool/: ThreadPool.cpp
src/server/Config/: CMakeLists.txt  Config.cpp  Config.hpp
src/server/DatabaseRepository/: DatabaseRepository.cpp  DatabaseRepository.hpp
src/server/Entity/: MessageRepository.cpp  MessageRepository.hpp  UserRepository.cpp  UserRepository.hpp
src/server/Entity/DBQueries/: create_tables.txt  message_queries.txt  user_queries.txt
src/server/JSON/: CMakeLists.txt  Convert.hpp  JSON.cpp  JSON.hpp  JSONAll.hpp  Macros.hpp  Parser.cpp  Parser.hpp  PreprocessorUtilities.hpp  Serializer.cpp  Serializer.hpp  SerializerVectorImpl.hpp
src/server/JsonParser/: JsonParser.cpp  JsonParser.hpp
src/server/SMTP/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Connection.hpp  IServer.hpp  ISession.hpp  ISessionHandler.hpp  SSLServer.cpp  SSLServer.hpp  SSLSession.cpp  SSLSession.hpp  Server.cpp  Server.hpp  ServerContext.hpp  ServerOptions.hpp  Session.cpp  Session.hpp  SessionContext.hpp  Utils.hpp
src/server/SMTP/Protocol/: CMakeLists.txt  Command.hpp  CommandContext.cpp  CommandContext.hpp  EhloCommand.cpp  EhloCommand.hpp  HeloCommand.cpp  HeloCommand.hpp  Parser.cpp  Parser.hpp  QuitCommand.cpp  QuitCommand.hpp  ReplyCode.hpp  Response.cpp  Response.hpp  ServiceReadyCommand.cpp  ServiceReadyCommand.hpp
src/server/SMTP/Protocol/Command/: AuthCommand.cpp  AuthCommand.hpp  Command.hpp  DataCommand.cpp  DataCommand.hpp  EhloCommand.cpp  EhloCommand.hpp  HeloCommand.cpp  HeloCommand.hpp  ICommand.hpp  MailFromCommand.cpp  MailFromCommand.hpp  NoopCommand.cpp  NoopCommand.hpp  QuitCommand.cpp  QuitCommand.hpp  RcptToCommand.cpp  RcptToCommand.hpp  RsetCommand.cpp  RsetCommand.hpp  ServiceReadyCommand.cpp  ServiceReadyCommand.hpp  StartTLSCommand.cpp  StartTLSCommand.hpp  VrfyCommand.cpp  VrfyCommand.hpp
src/server/SMTP/SSL/: SSLServer.cpp  SSLServer.hpp  SSLSession.cpp  SSLSession.hpp  Server.cpp  Server.hpp  ServerBase.cpp  ServerBase.hpp  Session.cpp  Session.hpp  SessionBase.cpp  SessionBase.hpp
src/server/SMTP/TCP/: CMakeLists.txt  Server.cpp  Server.hpp  Session.cpp  Session.hpp
src/server/ThreadPool/: Task.h  ThreadPool.cpp  ThreadPool.h  UnboundedBlockingMPMCQueue.h  WaitGroup.cpp  WaitGroup.h
src/server/connection/: CMakeLists.txt  connection.hpp  smtp_connection.cpp  smtp_connection.hpp  smtp_session.cpp  smtp_session.hpp
src/server/json-parser/: JsonParser.cpp  JsonParser.hpp
tests/: CMakeLists.txt
tests/server/: ConfigTests.cpp  JSONTest.cpp  JsonParserTests.cpp  SerializerTests.cpp
tools/certificates/: cert.pem  dhparam.pem  key.pem
